--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/global.css";
+
 const siteTitle = "Dokumint";
 const siteDescription =
   "A modern MSP documentation platform, built by MSPs for MSPs.";
