--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,13 +26,19 @@ const siteDescription =
              dark:bg-gray-950 dark:text-gray-100">
 
   <!-- HEADER -->
-  <header class="max-w-3xl mx-auto px-6 pt-12">
-    <img
-      src="/assets/logo/dokumint.svg"
-      alt="Dokumint"
-      class="h-8"
-    />
-  </header>
+  <header class="mb-16">
+  <img
+    src="/assets/logo/dokumint.svg"
+    alt="Dokumint"
+    class="h-8 dark:hidden"
+  />
+  <img
+    src="/assets/logo/dokumint-dark.svg"
+    alt="Dokumint"
+    class="h-8 hidden dark:block"
+  />
+</header>
+
 
   <main class="max-w-3xl mx-auto px-6 py-16 space-y-20">
 
