--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const siteDescription =
              dark:bg-gray-950 dark:text-gray-100">
 
   <!-- HEADER -->
-  <header class="mt-4 mb-20">
+  <header class="pt-4 mb-20">
   <div class="max-w-3xl mx-auto px-6">
     <img
       src="/assets/logo/dokumint.svg"
