--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -160,10 +160,10 @@ const siteDescription =
 				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-history"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 8l0 4l2 2" /><path d="M3.05 11a9 9 0 1 1 .5 4m-.5 5v-5h5" /></svg>			</div>
 
 			<h3 class="font-semibold mb-2">
-				Revision history
+				Revision/Activity history
 			</h3>
 			<p class="text-sm text-gray-500 dark:text-gray-400">
-				Track every change
+				Track every change and intent
 			</p>
 		</div>
 
