ltd company number

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -203,9 +203,12 @@ const siteDescription =
 
 			
 		</main>
-		<footer class="border-t border-gray-200 dark:border-gray-800 mt-20">
+		<footer class="flex border-t border-gray-200 dark:border-gray-800 mt-20">
       <div class="max-w-6xl mx-auto px-12 py-12 text-sm text-gray-500 dark:text-gray-400">
         © {new Date().getFullYear()} Doku<span class="org-mint">m</span>int. Built for MSPs, by MSPs.
+      </div>
+	  <div class="max-w-6xl mx-auto px-12 py-12 text-sm text-gray-500 dark:text-gray-400">
+        Dokumint Ltd is registered in England & Wales: 16927096
       </div>
     </footer>
 
